--- a/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
+++ b/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
@@ -69,7 +69,7 @@
   </ng-container>
 
   <ng-container matColumnDef="errors">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Errors </th>
+    <th mat-header-cell *matHeaderCellDef> Errors </th>
     <td mat-cell *matCellDef="let element" [style.color]="errorCount(element) ? 'red': 'green'"
       [style.font-weight]="errorCount(element) ? 'bold': 'normal'">
       <button mat-flat-button color="warn" [disabled]="errorCount(element) === 0"
@@ -78,7 +78,7 @@
   </ng-container>
 
   <ng-container matColumnDef="warnings">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Warnings </th>
+    <th mat-header-cell *matHeaderCellDef> Warnings </th>
     <td mat-cell *matCellDef="let element" [style.color]="errorCount(element, 'warning') ? 'orange': 'green'"
       [style.font-weight]="errorCount(element, 'warning') ? 'bold': 'normal'">
       <button mat-flat-button color="accent" [disabled]="errorCount(element, 'warning') === 0"
