--- a/libs/media/src/lib/file/file-uploader/file-uploader.component.scss
+++ b/libs/media/src/lib/file/file-uploader/file-uploader.component.scss
@@ -26,7 +26,7 @@ section {
 }
 section.drop-zone {
   border: dashed 1px var(--primary);
-  min-height: 316px; // Size of the "Waiting" drop zone
+  min-height: 316px; // Size of the "Waiting" drop zone TODO #5964
 }
 
 .upload-button-container {
