--- a/libs/media/src/lib/image/uploader/uploader.component.scss
+++ b/libs/media/src/lib/image/uploader/uploader.component.scss
@@ -13,7 +13,7 @@ section {
   }
   article.drop-zone {
     border: dashed 1px var(--primary);
-    min-height: 316px; // Size of the "Waiting" drop zone
+    min-height: 316px; // Size of the "Waiting" drop zone TODO #5964
     display: flex;
     flex-direction: column;
     justify-content: center;
