--- a/libs/import/src/lib/table-extracted-elements/contracts/contracts.component.html
+++ b/libs/import/src/lib/table-extracted-elements/contracts/contracts.component.html
@@ -19,7 +19,7 @@
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
-<table mat-table [dataSource]="rows" matSort class="extracted-contract-list">
+<table mat-table [dataSource]="rows" matSort>
 
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
@@ -55,9 +55,8 @@
 
   <ng-container matColumnDef="errors">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Errors </th>
-    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount) ? 'red': 'green'"
-      [style.font-weight]="(element | errorCount) ? 'bold': 'normal'">
-      <button mat-flat-button color="warn" [disabled]="(element | errorCount) === 0" (click)="displayErrors(element)">
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="warn" [disabled]="!(element | errorCount)" (click)="displayErrors(element)">
         {{ element | errorCount  }}
       </button>
     </td>
@@ -65,9 +64,8 @@
 
   <ng-container matColumnDef="warnings">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Warnings </th>
-    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount : 'warning') ? 'orange': 'green'"
-      [style.font-weight]="(element | errorCount : 'warning') ? 'bold': 'normal'">
-      <button mat-flat-button color="accent" [disabled]="(element | errorCount : 'warning') === 0"
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="accent" [disabled]="!(element | errorCount : 'warning')"
         (click)="displayErrors(element)">{{ element | errorCount : 'warning' }}</button>
     </td>
   </ng-container>
