--- a/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
+++ b/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
@@ -35,7 +35,7 @@
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
-<table mat-table [dataSource]="rows" matSort class="extracted-movie-list">
+<table mat-table [dataSource]="rows" matSort>
 
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
@@ -70,18 +70,16 @@
 
   <ng-container matColumnDef="errors">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Errors </th>
-    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount) ? 'red': 'green'"
-      [style.font-weight]="(element | errorCount) ? 'bold': 'normal'">
-      <button mat-flat-button color="warn" [disabled]="(element | errorCount) === 0"
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="warn" [disabled]="!(element | errorCount)"
         (click)="displayErrors(element)">{{ element | errorCount }}</button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="warnings">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Warnings </th>
-    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount : 'warning') ? 'orange': 'green'"
-      [style.font-weight]="element | errorCount : 'warning' ? 'bold': 'normal'">
-      <button mat-flat-button color="accent" [disabled]="(element | errorCount : 'warning') === 0"
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="accent" [disabled]="!(element | errorCount : 'warning')"
         (click)="displayErrors(element)">{{ element | errorCount : 'warning' }}</button>
     </td>
   </ng-container>
