--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -85,7 +85,10 @@
 
     <article>
       <header>
-        <h4>Attended Screenings</h4>
+        <article>
+          <h4>Attended Screenings</h4>
+          <p>"0s" means the user watched less than a minute.</p>
+        </article>
         <button mat-button color="primary" (click)="exportScreenerAnalytics()">
           <mat-icon svgIcon="cloud_download"></mat-icon>
           <span>Export Analytics to .CSV</span>
@@ -96,7 +99,7 @@
           {{ title | maxLength: 50 }}
         </ng-template>
         <ng-template colRef="status" label="Invitation" let-status sort>
-          {{ status | titlecase }}
+          {{ status | toLabel: 'invitationStatus' }}
         </ng-template>
         <ng-template colRef="mode" label="Request to Participate" let-mode sort>
           {{ mode | titlecase }}
