--- a/libs/event/src/lib/pages/analytics/analytics.component.scss
+++ b/libs/event/src/lib/pages/analytics/analytics.component.scss
@@ -1,5 +1,3 @@
-@import '@angular/flex-layout/mq';
-
 :host {
   display: block;
 }
@@ -8,17 +6,23 @@ img {
   width: 320px;
 }
 
-.attendees {
-  width: 550px;
-  margin-bottom: 24px;
+header {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 16px;
+
   h2 {
-    margin-top: 16px;
+    margin-bottom: 0;
+  }
+
+  a, button {
+    margin-left: auto;
   }
 }
 
-h3 {
-  margin-top: 16px;
-  margin-bottom: 0;
+analytics-metric-card-list {
+  margin-bottom: 24px;
 }
 
 .analytics {
@@ -27,10 +31,11 @@ h3 {
 
 .no-analytics {
   margin-bottom:100px;
+  display: grid;
+  place-items: center;
 }
 
-@include layout-bp(xs) {
-  .attendees {
-    width: 300px;
-  }
+.loading-spinner {
+  display: flex;
+  justify-content: center;
 }
